Bionic ChangeLog:
-----------------

Differences between current and Android 2.3:

- <android/api-level.h>: Added new header to define __ANDROID_API__ to
  a constant integer corresponding to the native API level. This header
  also exists in the NDK's platform headers.

- <sys/cdefs.h>: Include <android/api-level.h>

-------------------------------------------------------------------------------
Differences between Android 2.3 and Android 2.2:

- <pthread.h>: Add reader/writer locks implementation. Add sanity
  checking to pthread_mutex_destroy() (e.g. a locked mutex will return
  EBUSY).

- <semaphore.h>: Use private futexes for semaphore implementation,
  unless your set 'pshared' to non-0 when calling sem_init().

  Also fixed a bug in sem_post() to make it wake up all waiting
  threads, instead of one. As a consequence, the maximum semaphore
  value is now reduced to 0x3fffffff.

- <math.h>: Added sincos(), sincosf() and sincosl() (GLibc compatibility).

- <sys/sysinfo.h>: Added missing sysinfo() system call implementation
  (the function was already declared in the header though).

- sysconf() didn't work for some arguments due to a small bug in the
  /proc line parser.

- <termio.h>: added missing header (just includes <termios.h>)

- <unistd.h>: add missing declaration for truncate(). The implementation
  was already here since Android 1.5.

  modify implementation of alarm() to return 0 in case of error (i.e.
  if a value larger than 0x7fffffff seconds is passed to it). This
  makes the implementation compliant with the GLibc behaviour.

- <wchar.h>: small fixes to really support wchar_t in Bionic (not there yet).

     the size of wchar_t is still 32-bit (decided by the compiler)

     WCHAR_MIN: changed from 0 to INT_MIN
     WCHAR_MAX: changed from 255 to INT_MAX

     wcpcpy(), wcpncpy(), wcscat(), wcschr(), wcscmp(),
     wcscpy(), wcscspn(), wcsdup(), wcslcat(), wcslcpy(),
     wcslen(), wcsncat(), wcsncmp(), wcsncpy(), wcsnlen(),